# dovetail

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml
.claude/skills/release/: SKILL.md
.orbit/: METHOD.md  STYLE.md  schema-version
.orbit/cards/: 0001-survey.yaml  0002-relate.yaml  0003-transform-shim.yaml
.orbit/choices/: 0001-dovetail-decides-arcform-executes.yaml  0002-data-package-canonical-manifest.yaml  0003-foreign-keys-as-relationship-model.yaml  0004-sql-preferred-fallback-ladder.yaml  0005-embedded-jaq-default-jq-optional.yaml  0006-discovery-execution-parity.yaml  0007-accepted-edges-only-compile.yaml  0008-pure-rust-core-thin-cli.yaml  0009-survey-relate-seam.yaml  0010-relate-emit-renders.yaml  0011-shim-cli-surface.yaml  0012-finetype-integration.yaml  0013-provenance-header-format.yaml  0014-in-process-duckdb-read-emit-to-file.yaml
.orbit/conventions/: changelog.md
.orbit/memories/: finetype-2.0-path-conformance.yaml  substrate-edit-no-truncate-oneliner.yaml
.orbit/memos/: 2026-06-21-jaq-shim-followups.md  2026-06-21-model-backed-detection-eval.md  2026-06-21-relate-followups.md  2026-06-21-survey-mvp-followups.md  2026-06-24-finetype-owns-frictionless-type-map.md
.orbit/specs/2026-06-20-survey-detection-and-load/: ac04-detector-decision.md  drive.yaml  eval-results.md  notes.jsonl  review-pr-2026-06-21.md  review-spec-2026-06-21.md  spec.yaml  tabletop.md  tasks.jsonl
.orbit/specs/2026-06-21-jaq-passthrough-shim/: divergence-notes.md  drive.yaml  notes.jsonl  review-pr-2026-06-21.md  review-spec-2026-06-21.md  spec.yaml  tabletop.md
.orbit/specs/2026-06-21-relate-discover-verify-render/: drive.yaml  notes.jsonl  review-pr-2026-06-21-v2.md  review-pr-2026-06-21.md  review-spec-2026-06-21.md  spec.yaml  tabletop.md
.orbit/topology/: README.md
crates/dovetail/: Cargo.toml
crates/dovetail-core/: Cargo.toml
crates/dovetail-core/src/: datapackage.rs  emit.rs  eval.rs  lib.rs  relate.rs  structure.rs  survey.rs  transform.rs
crates/dovetail-core/src/detect/: finetype_guided.rs  mod.rs  sample.rs  shape.rs
crates/dovetail-core/tests/: conformance.rs  datapackage.rs  emit_sql.rs  eval_harness.rs  jaq_transform.rs  relate_discovery.rs  roundtrip.rs  shape_detection.rs  survey_outcomes.rs
crates/dovetail/src/: main.rs
tests/fixtures/: README.md
tests/fixtures/csv-dup-cols/: data.csv  manifest.json
tests/fixtures/csv-simple/: data.csv  manifest.json
tests/fixtures/json-array/: data.json  manifest.json
tests/fixtures/json-object/: data.json  manifest.json
tests/fixtures/ndjson-simple/: data.ndjson  manifest.json
tests/fixtures/parquet-simple/: data.parquet  manifest.json
tests/fixtures/tsv-simple/: data.tsv  manifest.json
tests/jaq-corpus/: README.md  cases.json
tests/relate-fixtures/: build.sql  manifest.json
