[workspace]
resolver = "2"
members = ["crates/dovetail-core", "crates/dovetail"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/meridian-online/dovetail"

[workspace.dependencies]
# Sibling meridian crates — path dependencies (choice 0012: finetype as an
# in-process library dependency of dovetail-core). finetype-core carries the
# light structure/schema primitives; finetype-model carries the candle-backed
# column classifier used by the finetype-guided detector.
finetype-core = { path = "../finetype/crates/finetype-core" }
finetype-model = { path = "../finetype/crates/finetype-model" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
