[workspace]
resolver = "2"
members = ["crates/dovetail-core", "crates/dovetail"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/meridian-online/dovetail"

[workspace.dependencies]
# Sibling meridian crates — path dependencies (choice 0012: finetype as an
# in-process library dependency of dovetail-core). finetype-core carries the
# light structure/schema primitives; finetype-model carries the candle-backed
# column classifier used by the finetype-guided detector.
finetype-core = { path = "../finetype/crates/finetype-core" }
finetype-model = { path = "../finetype/crates/finetype-model" }

serde = { version = "1", features = ["derive"] }
# preserve_order keeps JSON object keys in document order — column order is a
# load-bearing detection output, not an alphabetised set.
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
thiserror = "2"

# Size-optimised release profile. The binary is dominated by statically-linked
# bundled DuckDB (choice 0014); release already compiles DuckDB optimised without
# debug info, and these settings trim the rest:
#   strip   — drop debug symbols (the bulk of the debug-build size)
#   lto     — thin cross-crate dead-code elimination on the Rust side
#   opt-level "s" / codegen-units 1 — optimise the Rust code for size
[profile.release]
opt-level = "s"
lto = "thin"
codegen-units = 1
strip = true
