[package]
name = "dovetail-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# The finetype-guided detector pulls finetype-model (candle ML stack). On by
# default so a normal build is the full survey; disable for fast iteration on
# the structure layer:  cargo test -p dovetail-core --no-default-features
default = ["finetype-guided"]
finetype-guided = ["dep:finetype-model"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
finetype-core = { workspace = true, features = ["embedded-taxonomy"] }
finetype-model = { workspace = true, optional = true }
parquet = { version = "53", default-features = false, features = ["arrow"] }
sha2 = "0.10"
# relate reads and queries DuckDB in-process for discovery (choice 0014):
# schema introspection, value-overlap/cardinality evidence, referential-integrity
# verification. Read-only discovery — execution is always an emitted artifact
# (choice 0001). Bundled libduckdb, pinned via Cargo.lock.
duckdb = { version = "1.4", features = ["bundled"] }
# Embedded jaq for the transform shim (choices 0005/0006).
jaq-core = "3"
jaq-std = "3"
jaq-json = "2"

[dev-dependencies]
# ac-08: descriptor conformance is checked in the test suite only — jsonschema
# stays out of the runtime dependency graph.
jsonschema = "0.26"
serde_yaml = "0.9.34"
